# Newsletter-Digest-Agent

./: .env.example  .gitignore  CLAUDE.md  LICENSE  PLANNING.md  README.md  pyproject.toml  requirements.txt
.specify/memory/: constitution.md
agent/: __main__.py  runner.py  scheduler.py
agent/advisor/: analyzer.py
agent/digest/: builder.py  delivery.py
agent/fetchers/: base_fetcher.py  gmail_fetcher.py
agent/parsers/: email_parser.py
agent/summarizer/: claude_summarizer.py
agent/utils/: __init__.py  config.py  eml_loader.py  exceptions.py  logger.py  models.py  rate_limiter.py
config/: newsletters.yaml
scripts/: gmail_auth.py  grade_extraction.py  test_pipeline.py
specs/001-digest-agent-enhancements/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-digest-agent-enhancements/checklists/: requirements.md
specs/001-digest-agent-enhancements/contracts/: cli.md  config-schema.md
specs/001-newsletter-digest-agent/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-newsletter-digest-agent/checklists/: requirements.md
specs/001-newsletter-digest-agent/contracts/: cli.md  config-schema.md  (+1 more)
templates/: digest.html.j2
tests/: conftest.py  test_advisor_analyzer.py  test_claude_summarizer.py  test_delivery.py  test_digest_builder.py  test_email_parser.py  test_gmail_fetcher.py  test_rate_limiter.py  test_runner.py  test_scheduler.py
tests/fixtures/: load_eml.py
tests/integration/: test_pipeline.py
tests/unit/: test_config.py  test_delivery.py  test_email_parser.py  test_summarizer.py
